--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -12,7 +12,9 @@
     <ul>
         <li><a href="{{ path('image_build_app_data', { 'type': 'box' }) }}">box</a></li>
         <li><a href="{{ path('image_build_app_data', { 'type': 'integrator' }) }}">integrator</a></li>
-        <li><a href="{{ path('image_build_log_data') }}">log</a></li>
+        <li><a href="{{ path('image_build_log_data', { 'type': 'log' }) }}">log</a></li>
+        <li><a href="{{ path('image_build_log_data', { 'type': 'cron' }) }}">cron</a></li>
+        <li><a href="{{ path('image_build_log_data', { 'type': 'logrotate' }) }}">logrotate</a></li>
     </ul>
 
     <h2>Образы</h2>
