Добавил env и config к настройкам билда cron и logrotate. Рефакторинг форм и моделей сборки образов

--- a/app/Resources/views/builder/build.html.twig
+++ b/app/Resources/views/builder/build.html.twig
@@ -2,7 +2,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Подготовка сборки data-контейнера для логов</h1>
+    <h1>Подготовка сборки</h1>
 
     {{ form_start(form) }}
     <p>
