--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,11 +10,11 @@
     <h2>Билдер</h2>
     <h3>Data</h3>
     <ul>
-        <li><a href="{{ path('image_build_app_data', { 'type': 'box' }) }}">box</a></li>
-        <li><a href="{{ path('image_build_app_data', { 'type': 'integrator' }) }}">integrator</a></li>
-        <li><a href="{{ path('image_build_log_data', { 'type': 'log' }) }}">log</a></li>
-        <li><a href="{{ path('image_build_log_data', { 'type': 'cron' }) }}">cron</a></li>
-        <li><a href="{{ path('image_build_log_data', { 'type': 'logrotate' }) }}">logrotate</a></li>
+        <li><a href="{{ path('image_build_project_related', { 'type': 'box' }) }}">box</a></li>
+        <li><a href="{{ path('image_build_project_related', { 'type': 'integrator' }) }}">integrator</a></li>
+        <li><a href="{{ path('image_build_project_related', { 'type': 'log' }) }}">log</a></li>
+        <li><a href="{{ path('image_build_project_related', { 'type': 'cron' }) }}">cron</a></li>
+        <li><a href="{{ path('image_build_project_related', { 'type': 'logrotate' }) }}">logrotate</a></li>
     </ul>
 
     <h2>Образы</h2>
